--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 33a62383bf0beb0aeb574784168345597afa6e00cb42cc943f6708e06370ae37
+-- hash: 610f174fd4598a8ab9987ef588849ffd10eebdd86741c98dbe9219a1c979785e
 
 name:           roboservant
 version:        0.1.0.0
@@ -28,12 +28,14 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Roboservant
   other-modules:
       Paths_roboservant
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , hspec
     , servant
     , servant-flatten
   default-language: Haskell2010
@@ -48,6 +50,7 @@ test-suite roboservant-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , hspec
     , roboservant
     , servant
     , servant-flatten
