--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ name: CI
 on:
   pull_request:
   push:
-    branches: [master]
 
 jobs:
   stack:
@@ -19,11 +18,6 @@ jobs:
     - uses: actions/checkout@v2
       if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
 
-    - name: install postgresql on ubuntu
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      run: |
-        sudo apt install postgresql-10
-
     - uses: actions/setup-haskell@v1.1
       name: Setup Haskell Stack
       with:
@@ -37,10 +31,6 @@ jobs:
         path: ~/.stack
         key: ${{ runner.os }}-${{ matrix.ghc }}-stack
 
-    - name: Ensure rebuild
-      run : |
-        touch squealgen.sql
-
     - name: Test
       run: |
-        PATH=/usr/lib/postgresql/10/bin:$PATH make test
+        stack test
