--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f12f192f6c83606ae6175fd14eb83a7860480c38629bf904dbbdf6cfd980ed14
+-- hash: e066fe1fb50c5d775ba730812d8afb9db9b9d14e08b2c25ca2277a1d7205d852
 
 name:           roboservant
 version:        0.1.0.0
@@ -28,15 +28,25 @@ source-repository head
 library
   exposed-modules:
       Roboservant
+      Roboservant.ContextualGenRequest
+      Roboservant.StateMachine
   other-modules:
       Paths_roboservant
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
+    , bytestring
     , hspec
-    , servant
+    , http-client
+    , http-media
+    , quickcheck-state-machine
+    , servant >=0.17
+    , servant-client >=0.17
     , servant-flatten
+    , servant-server >=0.17
+    , string-conversions
   default-language: Haskell2010
 
 test-suite roboservant-test
@@ -48,9 +58,17 @@ test-suite roboservant-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
+    , bytestring
     , hspec
+    , http-client
+    , http-media
+    , quickcheck-state-machine
     , roboservant
-    , servant
+    , servant >=0.17
+    , servant-client >=0.17
     , servant-flatten
+    , servant-server >=0.17
+    , string-conversions
   default-language: Haskell2010
