--- a/package.yaml
+++ b/package.yaml
@@ -22,10 +22,17 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - servant
-# - servant-server
+- http-media
+- servant
+- servant-client
+- http-client
+- string-conversions
+- bytestring
+- servant-server
 - servant-flatten
 # test deps
 - hspec
+- QuickCheck
 library:
   source-dirs: src
 
