--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.2.
+-- This file has been generated from package.yaml by hpack version 0.33.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f12f192f6c83606ae6175fd14eb83a7860480c38629bf904dbbdf6cfd980ed14
+-- hash: 1d1dc9e17b032426f93e2c0b97873ae2dc0475d8ba89547bf8279cdac07ec507
 
 name:           roboservant
 version:        0.1.0.0
@@ -28,15 +28,24 @@ source-repository head
 library
   exposed-modules:
       Roboservant
+      Roboservant.ContextualGenRequest
+      Roboservant.StateMachine
   other-modules:
       Paths_roboservant
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
+    , bytestring
     , hspec
+    , http-client
+    , http-media
     , servant
+    , servant-client
     , servant-flatten
+    , servant-server
+    , string-conversions
   default-language: Haskell2010
 
 test-suite roboservant-test
@@ -48,9 +57,16 @@ test-suite roboservant-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
+    , bytestring
     , hspec
+    , http-client
+    , http-media
     , roboservant
     , servant
+    , servant-client
     , servant-flatten
+    , servant-server
+    , string-conversions
   default-language: Haskell2010
