--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,7 @@ packages:
 #
 extra-deps:
 - servant-flatten-0.2@sha256:276896f7c5cdec5b8f8493f6205fded0cc602d050b58fdb09a6d7c85c3bb0837,1234
+- servant-0.18
 
 
 # Override default flag values for local packages and extra-deps
