--- a/stack.yaml
+++ b/stack.yaml
@@ -10,4 +10,4 @@ extra-deps:
 - servant-client-0.17
 - servant-client-core-0.17
 - servant-server-0.17
-
+- constrained-dynamic-0.1.0.0@sha256:3516d3b95c8180f8904671aa982af2fae55a185b18642192f5c8f50657108e82,1207
