--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a0b4b884d775a2096c422d6abaf66301ece323e26ea570df76ffc92b15ab89ba
+-- hash: bc1746c1053b1f6bf66cc30046bb205fefd129303feff615f0d885999eace809
 
 name:           roboservant
 version:        0.1.0.0
@@ -37,6 +37,7 @@ library
       src
   build-depends:
       QuickCheck
+    , aeson
     , base >=4.7 && <5
     , bytestring
     , constrained-dynamic
@@ -51,6 +52,8 @@ library
     , servant-flatten
     , servant-server >=0.17
     , string-conversions
+    , wai
+    , warp
   default-language: Haskell2010
 
 test-suite roboservant-test
@@ -63,6 +66,7 @@ test-suite roboservant-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       QuickCheck
+    , aeson
     , base >=4.7 && <5
     , bytestring
     , constrained-dynamic
@@ -78,4 +82,6 @@ test-suite roboservant-test
     , servant-flatten
     , servant-server >=0.17
     , string-conversions
+    , wai
+    , warp
   default-language: Haskell2010
