--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,7 @@ dependencies:
 - http-media
 - QuickCheck
 - quickcheck-state-machine >= 0.7
+- mtl
 - servant >= 0.17
 - servant-client >= 0.17
 - servant-flatten
