--- a/package.yaml
+++ b/package.yaml
@@ -26,8 +26,10 @@ dependencies:
 - servant-server # >= 0.17
 - string-conversions
 
-ghc-options: -Wall
-
+ghc-options:
+- -Wall
+- -fwrite-ide-info
+- -hiedir=.hie
 library:
   source-dirs: src
 
