--- a/stack.yaml
+++ b/stack.yaml
@@ -4,11 +4,11 @@ packages:
 
 extra-deps:
 - servant-flatten-0.2@sha256:276896f7c5cdec5b8f8493f6205fded0cc602d050b58fdb09a6d7c85c3bb0837,1234
-#- markov-chain-usage-model-0.0.0@sha256:1afa95faeb9213c4d960a669190078b41b89169462b8edd910472980671ba8c0,2112
-- servant-0.18
-- servant-client-0.18
-- servant-client-core-0.18
-- servant-server-0.18
+# #- markov-chain-usage-model-0.0.0@sha256:1afa95faeb9213c4d960a669190078b41b89169462b8edd910472980671ba8c0,2112
+# - servant-0.18
+# - servant-client-0.18
+# - servant-client-core-0.18
+# - servant-server-0.18
 # - hspec-hedgehog-0.0.1.2@sha256:aaeeb50a43d2bce8a1850baa3ddf934a964bfe38c64efd59306b0c1421e55b45,1405
 #- QuickCheck-2.14.1@sha256:01e46d7b0a8d3148288ec977625f62d5516ebb5031a50c63f0453863301b4a79,7736
 #- random-1.2.0
