--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 6420e658218cfbfe27ae6037534f3e63a37fb1c9dfbd1a48c5f5e435d959a5af
+-- hash: 0c7e475fb1182766bcb6f2b602d95ca2ce986757d1d23c061fb2800fee49f483
 
 name:           roboservant
 version:        0.1.0.2
@@ -46,6 +46,7 @@ library
     , containers
     , dependent-map
     , dependent-sum
+    , hashable
     , lifted-base
     , monad-control
     , mtl
@@ -57,6 +58,7 @@ library
     , string-conversions
     , text
     , time
+    , unordered-containers
     , vinyl
   default-language: Haskell2010
 
@@ -82,6 +84,7 @@ test-suite roboservant-test
     , containers
     , dependent-map
     , dependent-sum
+    , hashable
     , hspec
     , hspec-core
     , http-api-data
@@ -97,5 +100,6 @@ test-suite roboservant-test
     , string-conversions
     , text
     , time
+    , unordered-containers
     , vinyl
   default-language: Haskell2010
