--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,6 @@
 resolver: lts-16.27
 # bit faster on ReifiedApi stuff which is unfortunately terribly slow.
-compiler: ghc-8.10.3
+# compiler: ghc-8.10.3
 packages:
 - .
 
