--- a/.github/workflows/cabal.yml
+++ b/.github/workflows/cabal.yml
@@ -4,61 +4,56 @@ name: Cabal CI
 on:
   push:
     branches:
-    - '**'
-    paths-ignore: []
+      - '**'
   pull_request:
-    paths-ignore: []
 
 jobs:
   linux:
-
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         versions:
-          - ghc: '8.8.4'
-            cabal: '3.4'
-          - ghc: '8.10.4'
-            cabal: '3.4'
+          - ghc: '9.8.2'
+            cabal: '3.10.2.0'
+          - ghc: '9.6.5'
+            cabal: '3.10.2.0'
+          - ghc: '9.4.8'
+            cabal: '3.10.2.0'
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    # need to install older cabal/ghc versions from ppa repository
+      - name: Install cabal & ghc
+        uses: haskell/actions/setup@v2
+        with:
+          ghc-version: ${{ matrix.versions.ghc }}
+          cabal-version: ${{ matrix.versions.cabal }}
 
-    - name: Install recent cabal/ghc
-      uses: actions/setup-haskell@v1.1.3
-      with:
-        ghc-version: ${{ matrix.versions.ghc }}
-        cabal-version: ${{ matrix.versions.cabal }}
+      - name: Cache cabal global package db
+        id: cabal-global
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cabal
+          key: ${{ runner.os }}-${{ matrix.versions.ghc }}-${{ matrix.versions.cabal }}-cabal-global-${{ hashFiles('cabal.project') }}
 
-    # declare/restore cached things
-    # caching doesn't work for scheduled runs yet
-    # https://github.com/actions/cache/issues/63
+      - name: Cache cabal build
+        id: cabal-local
+        uses: actions/cache@v4
+        with:
+          path: |
+            dist-newstyle
+          key: ${{ runner.os }}-${{ matrix.versions.ghc }}-${{ matrix.versions.cabal }}-cabal-local
 
-    - name: Cache cabal global package db
-      id:   cabal-global
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cabal
-        key: ${{ runner.os }}-${{ matrix.versions.ghc }}-${{ matrix.versions.cabal }}-cabal-global-${{ hashFiles('cabal.project') }}
-
-    - name: Cache cabal work
-      id:   cabal-local
-      uses: actions/cache@v2
-      with:
-        path: |
-          dist-newstyle
-        key: ${{ runner.os }}-${{ matrix.versions.ghc }}-${{ matrix.versions.cabal }}-cabal-local
-
-    - name: Install dependencies
-      run: |
+      - name: Install dependencies
+        run: |
           cabal update
           cabal build all --dependencies-only --enable-tests --disable-optimization
-    - name: Build
-      run: |
+
+      - name: Build
+        run: |
           cabal build all --enable-tests --disable-optimization 2>&1 | tee build.log
-    - name: Test
-      run: |
+
+      - name: Test
+        run: |
           cabal test all --disable-optimization
