ci: avoid double builds on push

--- a/.github/workflows/cabal.yml
+++ b/.github/workflows/cabal.yml
@@ -4,9 +4,10 @@ name: Cabal CI
 on:
   push:
     branches:
-      - '**'
+      - master
   pull_request:
-
+    branches:
+      - master
 jobs:
   linux:
     runs-on: ubuntu-latest
