--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c5f98b6556cef99489cc29bc60023fdae77023f490f29fb814583bd35e37be8e
+-- hash: 13209f99d9f8ea91e1c5b19e7bc4e414b5870701bc606f7f662de3f1ac3072e0
 
 name:           roboservant
 version:        0.1.0.4
@@ -13,6 +13,7 @@ description:    Please see the README on GitHub at <https://github.com/mwotton/r
 category:       Web
 homepage:       https://github.com/mwotton/roboservant#readme
 bug-reports:    https://github.com/mwotton/roboservant/issues
+maintainer:     mwotton@gmail.com
 copyright:      2020 Mark Wotton, Samuel Schlesinger
 license:        BSD3
 license-file:   LICENSE
@@ -54,7 +55,7 @@ library
     , http-types ==0.12.*
     , lifted-base ==0.2.*
     , monad-control ==1.0.*
-    , mtl
+    , mtl >=2.2 && <2.4
     , random >=1.2 && <1.4
     , servant >=0.18 && <0.21
     , servant-client >=0.18 && <0.21
@@ -91,7 +92,7 @@ test-suite example
     , http-types ==0.12.*
     , lifted-base ==0.2.*
     , monad-control ==1.0.*
-    , mtl
+    , mtl >=2.2 && <2.4
     , random >=1.2 && <1.4
     , roboservant
     , servant >=0.18 && <0.21
@@ -142,7 +143,7 @@ test-suite roboservant-test
     , http-types ==0.12.*
     , lifted-base ==0.2.*
     , monad-control ==1.0.*
-    , mtl
+    , mtl >=2.2 && <2.4
     , random >=1.2 && <1.4
     , roboservant
     , servant >=0.18 && <0.21
