add cabal check to ci

--- a/.github/workflows/cabal.yml
+++ b/.github/workflows/cabal.yml
@@ -58,3 +58,6 @@ jobs:
       - name: Test
         run: |
           cabal test all --disable-optimization
+
+      - name: cabal check
+        run: cabal check
