failing shrink test

--- a/roboservant.cabal
+++ b/roboservant.cabal
@@ -114,6 +114,7 @@ test-suite roboservant-test
       Breakdown
       Foo
       Headers
+      MinithesisExample
       Nested
       Post
       Product
